--- a/sep490-g94-sp26-fe/angular.json
+++ b/sep490-g94-sp26-fe/angular.json
@@ -8,7 +8,11 @@
   "projects": {
     "sep490-g94-sp26-fe": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -25,7 +29,8 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/assets/styles.scss", 
+              "src/assets/tailwind.css"
             ]
           },
           "configurations": {
