--- a/sep490-g94-sp26-fe/package.json
+++ b/sep490-g94-sp26-fe/package.json
@@ -29,15 +29,32 @@
     "@angular/forms": "^21.1.0",
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
+    "@primeuix/themes": "^2.0.0",
+    "@tailwindcss/postcss": "^4.1.11",
+    "chart.js": "4.4.2",
+    "primeclt": "^0.1.5",
+    "primeicons": "^7.0.0",
+    "primeng": "^21.0.2",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tailwindcss-primeui": "^0.6.1",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@angular/build": "^21.1.1",
     "@angular/cli": "^21.1.1",
     "@angular/compiler-cli": "^21.1.0",
+    "autoprefixer": "^10.4.20",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
-    "vitest": "^4.0.8"
+    "vitest": "^4.0.8",
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "postcss": "^8.5.6",
+    "prettier": "^3.0.0",
+    "tailwindcss": "^4.1.11"
   }
 }
