--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     container_name: sep490-postgres
     restart: unless-stopped
     environment:
-      POSTGRES_DB: wedding_db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres123
+      POSTGRES_DB: wedding_services
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: secret
     ports:
       - "5432:5432"
     volumes:
